<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BMI" >

    <TextView
        android:id="@+id/TextViewAnswer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:freezesText="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="100dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/textViewLength"
        android:ems="4"
        android:inputType="numberDecimal|numberSigned" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextLength"
        android:layout_alignBottom="@+id/editTextLength"
        android:layout_alignLeft="@+id/TextViewAnswer"
        android:text="@string/textViewLength" />

    <EditText
        android:id="@+id/editTextWeigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLength"
        android:layout_below="@+id/editTextLength"
        android:layout_marginTop="27dp"
        android:ems="4"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:id="@+id/textViewWeigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextWeigth"
        android:layout_alignLeft="@+id/TextViewAnswer"
        android:text="@string/textViewWeigth" />

    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextViewAnswer"
        android:layout_alignParentRight="true"
        android:background="@color/myColorGreen"
        android:minWidth="70dp"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/buttonTextCompute" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextViewAnswer"
        android:layout_centerHorizontal="true"
        android:background="@color/myColorBlue"
        android:onClick="onClick"
        android:text="@string/buttonTextReset" />

</RelativeLayout>
