<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/laidout"
    tools:context=".ColorDisplay" >

    <LinearLayout
        android:background="#ffffff"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >
        	
        	<LinearLayout
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:orientation="vertical"
        	    android:padding="10dp" >
 
        		<TextView
			        android:id="@+id/TextViewRed"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:gravity="center" 
			        android:text="@string/TextViewRed"/>
        		<EditText 
        		    android:id="@+id/editTextRed"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:ems="3"
			        android:inputType="numberSigned" />	    
        	</LinearLayout>
        	
        	<LinearLayout
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:orientation="vertical"
        	    android:padding="10dp" >
   
        		<TextView
			        android:id="@+id/TextViewGreen"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:gravity="center" 
			        android:text="@string/TextViewGreen"/>
        		<EditText 
        		    android:id="@+id/editTextGreen"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:ems="3"
			        android:inputType="numberSigned" />     	    
        	</LinearLayout>
        	
        	<LinearLayout
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:orientation="vertical"
        	    android:padding="10dp" >
        	
        		<TextView
			        android:id="@+id/TextViewBlue"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:gravity="center" 
			        android:text="@string/TextViewBlue"/>
        		<EditText 
        		    android:id="@+id/editTextBlue"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:ems="3"
			        android:inputType="numberSigned" />    
        	</LinearLayout>
        	
        </LinearLayout>

        <Button
            android:id="@+id/buttonDisplayColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/myColorBlack"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/buttonDisplayColor"
            android:textColor="@color/myTextColorWhite"
            android:textStyle="bold" />
      
    </LinearLayout>    

</RelativeLayout>